fix(AttentionBox): spacings for default-mode's bottom actions

--- a/packages/core/src/components/AttentionBox/layouts/AttentionBoxDefault/AttentionBoxDefault.module.scss
+++ b/packages/core/src/components/AttentionBox/layouts/AttentionBoxDefault/AttentionBoxDefault.module.scss
@@ -9,7 +9,7 @@
 
 .actionSection {
   width: 100%;
-  margin-top: var(--space-4);
+  margin-top: var(--space-16);
 }
 
 .textContainer {
